<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#121212">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_api_key_title"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextApiKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pref_api_key_summary"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#6F7C85"
            android:backgroundTint="#FFFFFF"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/buttonSaveKey"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_api_key"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textViewCurrentKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#6F7C85"
            android:textSize="12sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/buttonBack"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@drawable/button_grey"/>

    </LinearLayout>

</LinearLayout>